# vibe_rust_array30

./: Cargo.toml  LICENSE
.claude/: settings.local.json
dev/: work20260105.txt
doc/: design01.txt  design02.txt
src/: config.rs  console.rs  dict.rs  gui.rs  input_engine.rs  keymap.rs  lib.rs  main.rs  state.rs
table/: source.txt
