[package]
name = "rustarray30"
version = "0.1.0"
edition = "2021"

[dependencies]
# Terminal input handling for Linux console
crossterm = "0.28"
dirs = "6.0.0"
ini = "1.3.0"
serde = "1.0.228"
serde_json = "1.0.148"

# GUI for Windows
[target.'cfg(windows)'.dependencies]
egui = "0.29"
eframe = "0.29"
arboard = "3.4"

# Image loading for all platforms
image = { version = "0.25", features = ["jpeg"] }

# Dictionary and data structures
phf = { version = "0.11", features = ["macros"] }
regex = "1"

[features]
default = []
big = []
